# Fork

./: build_err.txt  build_installer.bat  build_log_final.txt  build_log_retry.txt  package-lock.json  package.json
src/: app.css
src-core/: playwright-service.js
src-tauri/: Cargo.toml  build_err_2.txt  build_err_4.txt  build_err_5.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_attempt_3.txt  build_log_attempt_4.txt  build_log_attempt_5.txt  build_log_check_deps.txt  build_log_cleanup.txt  build_log_final_check.txt  build_log_final_clean.txt  build_log_final_verification.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/core/: auth.rs  local_llm.rs  mod.rs  openai.rs  orchestrator.rs  rag.rs  sandbox.rs  security.rs  telemetry.rs  updater.rs
src-tauri/src/db/: mod.rs
src/components/: AccountsPanel.svelte  AgentCard.svelte  AgentEditor.svelte  AgentsPanel.svelte  CodeBlock.svelte  MessageDisplay.svelte  RagPanel.svelte  StatsPanel.svelte
src/routes/: +page.svelte
