[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HINT/PISTA: We use `native-tls` to avoid compiling `aws-lc-sys` (which breaks with global /MD flags).
# Usamos `native-tls` para evitar compilar `aws-lc-sys` (que falla con las banderas globales /MD).
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking", "native-tls", "multipart", "stream"] }
tauri-plugin-shell = "2.3.5"
anyhow = "1.0.101"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
keyring = "3.6.3"
bollard = "0.20.1"
futures-util = "0.3.32"
uuid = { version = "1.21.0", features = ["v4"] }
ort = { version = "2.0.0-rc.11", features = ["directml", "download-binaries"] }
# HINT/PISTA: `esaxx-rs` (static dep) is pulled by default. We disable default features to try to minimize it,
# though it persists. The `.cargo/config.toml` fix handles its linking mode.
# `esaxx-rs` (dep estática) se incluye por defecto. Deshabilitamos características por defecto para minimizarlo,
# aunque persiste. El arreglo en `.cargo/config.toml` maneja su modo de enlace.
tokenizers = { version = "0.22.2", default-features = false, features = ["onig", "http"] }
dirs = "6.0.0"
tauri-plugin-fs = "2.4.5"

